# SyntheticBalance-Backend

./: .gitignore  README.md  config.py  ctgan_wrapper.py  data_handler.py  main.py  modal_runner.py  pyproject.toml  requirements.txt  settings.py
downstream/: classifier.py
evaluation/: privacy.py  quality.py
generators/: __init__.py  ctgan.py
handlers/: data_handler.py
persistence/: __init__.py  supabase_s3.py
persistence/backends/: __init__.py  base.py  memory.py  supabase_minio.py  supabase_s3.py
services/: auth.py  generation.py  state.py  training.py  uploads.py  utils.py
supabase/: schema.sql
tests/: test_backend_api.py  test_upload.py
