[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.59",
    "ctgan>=0.11.1",
    "fastapi>=0.136.0",
    "matplotlib>=3.10.8",
    "modal>=1.4.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sdmetrics>=0.25.0",
    "seaborn>=0.13.2",
    "supabase>=2.18.1",
    "uvicorn[standard]>=0.45.0",
    "xgboost>=3.2.0",
]
